# OpenPOPCON

./: .gitignore  NSF_run.ipynb  README.MD  environment.yml  example_run.py  kikuchi.ipynb  openpopcon.py  openpopcon_main.py  pyproject.toml  test.ipynb  test1.ipynb
.github/workflows/: ci.yml
Lrad_coefficients/: get_Lrad.py  get_Zeff.py  test_Lrad.py  test_Zeff.py
Reactivity_CrossSection/: FusionCrossSectionHaleBosch.py  HaleBoschPlotter.py
openpopcon/: __init__.py  cli.py  core.py
openpopcon/lib/: neat_json_encoder.py  openpopcon_util.py  phys_lib.py
openpopcon/resources/examples/MANTA/: manta_ex.ipynb
openpopcon/resources/examples/NSF/: NSF_run.ipynb  makeNSFprofiles.py  pNSF.csv
openpopcon/resources/examples/NSF_NT_CMOD/: POPCON_input_example.yaml
openpopcon/resources/examples/SPARC/: POPCON_input_example.yaml  SPARC_EX.ipynb
openpopcon/resources/examples/radiative_ARC/: POPCON_input_example.yaml
resources/: default_plotsettings.yml  plotsettings.yml  scalinglaws.yml
resources/examples/MANTA/: POPCON_input_example.yaml  gMANTA  manta_ex.ipynb  plotsettings.yml  profsMANTA.csv
resources/examples/MANTA/.ipynb_checkpoints/: manta_ex-checkpoint.ipynb
resources/examples/NSF/: NSF_POPCON.yaml  NSF_run.ipynb  gNSF  gNSF_Guizzo  makeNSFprofiles.py
resources/examples/NSF_NT_CMOD/: POPCON_input_example.yaml  plotsettings.yml
resources/examples/SPARC/: POPCON_input_example.yaml  SPARC_EX.ipynb
resources/examples/STELLARATOR/: POPCON_input_example.yaml  STELLARATOR_EX.ipynb  plotsettings.yml
resources/examples/Stellarator/: Stellarator_ex.ipynb  Stellarator_example.yaml  plotsettings.yml
resources/examples/Stellarator/.ipynb_checkpoints/: manta_ex-checkpoint.ipynb
resources/examples/radiative_ARC/: POPCON_input_example.yaml
src/: Zeff_lib.py  ionization_and_radiation.py  openpopcon copy.py  openpopcon.py  openpopcon_main.py  openpopcon_util.py  phys_lib.py  vmec_reader.py
src/lib/: neat_json_encoder.py  openpopcon_util.py  phys_lib.py  test_vmec.py
test_POPCON/: run_popcon.py  run_profiles.py
tests/: conftest.py  generate_golden.py  helpers.py  test_invariants.py  test_regression.py  test_validation.py
tests/data/: golden_manta.json
tools/: ARCHpopcon.py  ARCHpopconPlot.py  popcon_cleanplot.py  popcon_intersect.py  scanpopcon.py
tools/my_popcon_scans/: ARCHpcbase.p  apcs_2020_10_13_Ip18-H1.0-R4.0.p  apcs_2020_10_13_Ip18-H1.5-R4.0.p
