[project]
name = "openpopcon"
version = "2.0.0"
description = "0-D tokamak scoping tool for Columbia's Fusion Reactor Design course"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.0",   # np.trapezoid, which replaced np.trapz
    "scipy",
    "matplotlib",
    "numba",
    "pyyaml",
]

[project.optional-dependencies]
notebooks = ["jupyterlab"]

[tool.uv]
package = false
