[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openpopcon"
version = "2.0.0"
description = "0-D tokamak scoping tool for Columbia's Fusion Reactor Design course"
readme = "README.MD"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.0",   # np.trapezoid, which replaced np.trapz
    "scipy",
    "matplotlib",
    "contourpy",    # imported directly by lib/openpopcon_util.py
    "numba>=0.60",   # np.trapezoid support inside njit; cache=True with parallel=True
    "pyyaml",
    "xarray",
]

[project.optional-dependencies]
notebooks = ["jupyterlab"]
# installs a netCDF4 backend; without it xarray writes netCDF3 via scipy
netcdf4 = ["h5netcdf"]

[project.scripts]
openpopcon = "openpopcon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["openpopcon"]

# openpopcon/resources (the two config YAMLs and the worked examples) is picked
# up with the package; the numba cache artifacts are not
[tool.hatch.build]
exclude = [
    "**/__pycache__",
    "**/*.nbc",
    "**/*.nbi",
    "**/*.pyc",
]
